openshift/deployment.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: backend-mlops
  labels:
    app: mlops-app
spec:
  replicas: 1
  selector:
    app: mlops-app
    deploymentconfig: backend-mlops
  strategy:
    type: Rolling
    rollingParams:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: mlops-app
        deploymentconfig: backend-mlops
    spec:
      containers:
      - name: backend-mlops
        image: artifactorymlopsk18.jfrog.io/mlops-docker-images/mlops-backend:deployedImage4
        imagePullPolicy: Always
        resources:
          limits:
            cpu: '5'
            memory: 2Gi
          requests:
            cpu: 2m
            memory: 2Gi
      imagePullSecrets:
      - name: artifactory
