openshift/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend-mlops-dc
  labels:
    app: mlops-app
spec:
      host: http://backend-mlops-production.apps.sandbox-m2.ll9k.p1.openshiftapps.com
      to:
        kind: Service
        name: backend-mlops-dc
